@@ -1,6 +1,7 @@
 v1.4.8 (WIP)
 - Add italic text formatting flag
 - Add Modal.GetForm and Modal.GetFrame
+- Fill nil Flex space with default background color
 
 v1.4.7 (2020-06-09)
 - Add Box.SetBackgroundTransparent
